[gd_scene load_steps=5 format=3 uid="uid://djo0dd7ofvppk"]

[ext_resource type="Script" uid="uid://blmeeb41fmi7e" path="res://scripts/ui/components/AchievementPanel.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://b87fjwx31kgm0" path="res://assets/fonts/GlitchGoblin.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panelbg"]
bg_color = Color(0.0784314, 0.0784314, 0.0980392, 0.870588)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.784314, 0, 0.784314, 0.752941)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.964706, 0, 0.921569, 0.4)
shadow_size = 10

[sub_resource type="Theme" id="Theme_achievement"]
default_font = ExtResource("2_font")
default_font_size = 28
PanelContainer/styles/panel = SubResource("StyleBoxFlat_panelbg")

[node name="AchievementPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -85.0
offset_right = 200.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
theme = SubResource("Theme_achievement")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AchievementNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.87451, 0.0196078, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0.576471, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 28
text = "ACHIEVEMENT NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AchievementDescLabel" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.992157, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0.631373, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 22
text = "Achievement Description Text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DisplayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
